# reveng-file-upload-task

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml
backend/: .env.sample  Dockerfile  conftest.py  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg
backend/app/: config.py  exceptions.py  logging.py  main.py  metrics.py  middlewares.py  models.py  storage.py
backend/tests/integration/: test_api.py  test_middlewares.py
backend/tests/property/: test_property_uploads.py
backend/tests/unit/: test_exceptions.py  test_metrics.py  test_models.py  test_storage.py
frontend/: .env.sample  Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/src/: apiClient.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: FileTable.tsx  ProgressItem.tsx  UploadDropzone.tsx
frontend/src/e2e/: playwright.config.ts  tests.spec.ts
frontend/src/lib/: requestId.ts
frontend/src/providers/: QueryProvider.tsx
frontend/src/styles/: globals.css
scripts/: generate_api_types.sh
