[metadata]
name = file-upload-backend
version = 0.1.0

[options]
python_requires = >=3.11
packages = find:

[tool:pytest]
asyncio_mode = auto
addopts = -q

[mypy]
python_version = 3.11
warn_unused_ignores = True
disallow_untyped_defs = True
strict = True

[ruff]
line-length = 100
target-version = py311
select = E,F,I,B,C90
